<resources>
    <string name="app_name">MHealth</string>
    <string name="title_activity_maps">Map</string>
    <string name="startBtn">Start</string>
    <string name="stopBtn">Stop</string>
    <string name="historyBtn">History</string>
    <string name="saveBtn">Save</string>
    <string name="editBtn">Edit</string>
    <string name="doneBtn">Done</string>
    <string name="deleteBtn">Delete</string>
    <string name="renameBtn">Rename</string>
    <string name="btn1">Back</string>
    <string name="startTackingBtn">Start Tracking</string>
    <string name="backToMainActBtn">Back</string>
    <string name="heightLabel">Height</string>
    <string name="calculateButton">Calculate</string>
    <string name="EmptyString"></string>
    <string name="weightLabel">Weight</string>
    <string name="heartRateLabel">Start Activity</string>
    <string name="default_text">--</string>
    <!--  the BMI descriptions -->
    <string name="bmiNormal">Normal</string>
    <string name="bmiOver">Overweight</string>
    <string name="bmiUnder">Underweight</string>
    <string name="bmiSUnder">Severely Underweight</string>
    <string name="bmiObese">Obese</string>
    <string name="being_healthy_quote">Being healthy is a lifestyle not a diet!</string>

    <!-- Heart Rate Thresholds -->
    <string name="threshold">75</string>
    <string name="thresholdDifference">15</string>

    <string name="belowThreshold">Heart Rate is Low, speed up your pace in the next track</string>
    <string name="normalThreshold">Heart Rate is Normal, continue the same pace in the next track</string>
    <string name="aboveThreshold">Heart Rate is High, slow down your pace in the next track</string>

    <string name="visualizeBtn">Visualize Data</string>

    <string-array name="heightUnitsArray">
        <item >feet/inch</item>
        <item >m/cm</item>
    </string-array>
    <string-array name="weightUnitsArray">
        <item >lb</item>
        <item >kg</item>
    </string-array>

    <color name="colorRed">#ff0000</color>
    <color name="colorYellow">#00ffff</color>
    <color name="colorGreen">#3661d9</color>
    <color name="colorPurple">#d760a7</color>
    <color name="colorBG">#bbeceb</color>
    <color name="black">#000000</color>
</resources>
